--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 alembic==1.4.2
+Authlib==0.14.3
 certifi==2020.6.20
+cffi==1.14.2
 chardet==3.0.4
 click==7.1.2
+cryptography==3.1
 ecdsa==0.14.1
 Flask==1.1.2
 Flask-Cors==3.0.9
@@ -17,6 +20,7 @@ Mako==1.1.3
 MarkupSafe==1.1.1
 psycopg2-binary==2.8.6
 pyasn1==0.4.8
+pycparser==2.20
 python-dateutil==2.8.1
 python-editor==1.0.4
 python-jose==3.2.0
