--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ psycopg2-binary==2.8.6
 pyasn1==0.4.8
 pycparser==2.20
 python-dateutil==2.8.1
+python-dotenv==0.14.0
 python-editor==1.0.4
 python-jose==3.2.0
 requests==2.24.0
